HDFVIEW-272 fix attribute display (#38)
* Correct release input setting

* HDFVIEW-228, 265, 268 changes from master

* Add bitsets and BigInteger/BigDecimal comments

* Update with master changes

* Separate objects from datasets

* remove unneeded reference

* Remove extra text

* add @Override

* Fix export dataset

* Update copyright year

* ubuntu readme file name uses amd64 not x86_64

* Install location is one folder up

* HDFVIEW-270 fix file open issue

* Add missing xdr lib copy

* Fix copyright

* Fix copyright

* Fix mac signing and notary.

* HDFVIEW-272 fix attributes

Attribute tables switched from ascii display to real types.
Compound attributes display correctly except for 3d, paging does not
work yet. The databuffer selection process needs work.
Attribute object structure refactored to reuse dataset functionality.

* update ignore list

* update external libs and fix tests

* Fixed lib version test - all test (X hdf4 image) work

* revert build properties

* Cleanup Attribute class structure

* Remove unused classes

* Remove obsolete class reference

* Remove obsolete class reference

* Remove unnecessary keyword

* Remove unneeded keyword for interfaces.

* refactor classes creating Attribute interface

* format cleanup

* format cleanup

* format cleanup

* minor changes

* fix typo

* restore compound attribute toString

* Fix javadoc issues

* Fix exception checking

* Update more javadoc

* Address most all javadoc issues

* Fix tests and hdf4 attributes

* Revert props

* Minor renames and spelling

* Minor changes to improve consistency and error handling

* Cleanup to align more with other branches

* Add getFID() checks

* Updated slf4j logger