@@ -1,4 +1,4 @@
-package test.object.misc;
+package misc;
 
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
@@ -21,7 +21,7 @@ import hdf.hdf5lib.H5;
 import hdf.hdf5lib.HDF5Constants;
 import hdf.hdf5lib.HDFNativeData;
 import hdf.hdf5lib.exceptions.HDF5Exception;
-import hdf.object.Attribute;
+
 import hdf.object.CompoundDS;
 import hdf.object.Dataset;
 import hdf.object.Datatype;
@@ -34,6 +34,7 @@ import hdf.object.h5.H5CompoundDS;
 import hdf.object.h5.H5Datatype;
 import hdf.object.h5.H5File;
 import hdf.object.h5.H5Group;
+import hdf.object.h5.H5ScalarAttr;
 import hdf.object.h5.H5ScalarDS;
 
 public class DebugHDF {
@@ -192,12 +193,12 @@ public class DebugHDF {
 
         // create ref attributes
         Datatype attr_dtype = file.createDatatype( Datatype.CLASS_REFERENCE, Datatype.NATIVE, Datatype.NATIVE, Datatype.NATIVE);
-        Attribute attr = new Attribute(ds, "ref", attr_dtype, new long[] { 1 });
-        attr.setData(ds.getFullName());
+        H5ScalarAttr attr = new H5ScalarAttr(ds, "ref", attr_dtype, new long[] { 1 });
+        attr.setAttributeData(ds.getFullName());
         file.writeAttribute(ds, attr, false);
-        attr = new Attribute(ds, "refs", attr_dtype, new long[] { 2 });
-        attr.setData(ref_buf);
-        attr.write();
+        attr = new H5ScalarAttr(ds, "refs", attr_dtype, new long[] { 2 });
+        attr.setAttributeData(ref_buf);
+        attr.writeAttribute();
 
         file.close();
 
@@ -208,7 +209,7 @@ public class DebugHDF {
 
         // use low level API function, H5.H5Rget_name
         String[] name = { "" };
-        ;
+
         for (int i = 0; i < refs.length; i++) {
             H5.H5Rget_name(file.getFID(), HDF5Constants.H5R_OBJECT, HDFNativeData.longToByte(refs[i]), name, 32);
             System.out.println(name[0]);
@@ -258,11 +259,11 @@ public class DebugHDF {
         Datatype attr_dtype = testFile.createDatatype(
             Datatype.CLASS_STRING, 5,
             Datatype.NATIVE, Datatype.NATIVE);
-        Attribute attr = new Attribute(dataset, "foo", attr_dtype, attr_dims);
+        H5ScalarAttr attr = new H5ScalarAttr(dataset, "foo", attr_dtype, attr_dims);
 
         //byte[] bvalue = Dataset.stringToByte(attr_value, 5);
-        attr.setData(attr_value);
-        attr.write();
+        attr.setAttributeData(attr_value);
+        attr.writeAttribute();
 
         testFile.close();
 
@@ -276,9 +277,9 @@ public class DebugHDF {
         testFile.open();
         root = (Group)testFile.getRootObject();
         dataset = (Dataset)root.getMemberList().get(0);
-        List attrList = dataset.getMetadata();
-        attr = (Attribute)attrList.get(0);
-        attr.getData();
+        List attrList = ((H5ScalarDS)dataset).getMetadata();
+        attr = (H5ScalarAttr)attrList.get(0);
+        attr.getAttributeData();
         testFile.close();
     }
 
@@ -596,9 +597,9 @@ public class DebugHDF {
         // create and write an attribute to the dataset
         long[] attrDims = {2};
         int[] attrValue = {0, 10000};
-        Attribute attr = new Attribute(dataset, "range", dtype, attrDims);
-        attr.setData(attrValue); // set the attribute value
-        attr.write();
+        H5ScalarAttr attr = new H5ScalarAttr(dataset, "range", dtype, attrDims);
+        attr.setAttributeData(attrValue); // set the attribute value
+        attr.writeAttribute();
 
         // close the file
         file.close();
@@ -608,13 +609,13 @@ public class DebugHDF {
 
         // retrieve the dataset and attribute
         dataset = (Dataset)file.get(dname);
-        attr = (Attribute)dataset.getMetadata().get(0);
+        attr = (H5ScalarAttr)((H5ScalarDS)dataset).getMetadata().get(0);
 
         // change the attribute value
         if (attr!=null) {
             attrValue[0] = 100;
-            attr.setData(attrValue);
-            attr.write();
+            attr.setAttributeData(attrValue);
+            attr.writeAttribute();
         }
 
         // close file resource
@@ -953,12 +954,12 @@ public class DebugHDF {
                 Datatype.CLASS_INTEGER, 4, Datatype.NATIVE,
                 Datatype.NATIVE);
 
-        Attribute attr = new Attribute(root, "attribute int", attrType, dims0D);
+        H5ScalarAttr attr = new H5ScalarAttr(root, "attribute int", attrType, dims0D);
 
         int[] attrValue = { 15 }; // attribute value
 
-        attr.setData(attrValue); // set the attribute value
-        attr.write();
+        attr.setAttributeData(attrValue); // set the attribute value
+        attr.writeAttribute();
 
         // close file resource
         testFile.close();
@@ -994,17 +995,17 @@ public class DebugHDF {
         Group root = (Group) testFile.getRootObject();
 
         /** read Attribute */
-        Attribute attr = (Attribute) root.getMetadata().get(0);
+        H5ScalarAttr attr = (H5ScalarAttr) root.getMetadata().get(0);
         // System.out.println(attr);
 
-        attr.getName(); // -> attribute int
+        attr.getAttributeName(); // -> attribute int
 
         // System.out.println(attr.getName());
 
-        attr.getData(); // -> [15]
+        attr.getAttributeData(); // -> [15]
         // System.out.println(attr.getValue());
 
-        attr.getDatatype(); // -> null...
+        attr.getAttributeDatatype(); // -> null...
 
         // System.out.println(attr.getType());
     }
@@ -1507,15 +1508,15 @@ public class DebugHDF {
         int[] attrValue = {0, 10000}; // attribute value
 
         // create a attribute of 1D integer of size two
-        Attribute attr = new Attribute(dataset, "data range", dtype, attrDims);
-        attr.setData(attrValue); // set the attribute value
+        H5ScalarAttr attr = new H5ScalarAttr(dataset, "data range", dtype, attrDims);
+        attr.setAttributeData(attrValue); // set the attribute value
 
         // attach the attribute to the dataset
-        attr.write();
+        attr.writeAttribute();
 
         // read the attribute into memory
-        List attrList = dataset.getMetadata();
-        attr = (Attribute)attrList.get(0);
+        List attrList = ((H5ScalarDS)dataset).getMetadata();
+        attr = (H5ScalarAttr)attrList.get(0);
 
         // print out attribute value
         System.out.println( attr.toString() );
@@ -2813,19 +2814,19 @@ public class DebugHDF {
         final Group root = (Group) testFile.getRootObject();
 
         Vector v = new Vector();
-        v.addElement(new Float(1.2));
-        v.addElement(new Float(2.3));
-        v.addElement(new Float(4.5));
+        v.addElement(Double.valueOf(1.2));
+        v.addElement(Double.valueOf(2.3));
+        v.addElement(Double.valueOf(4.5));
 
         putData(testFile, root, "Vector Dataset",v,true, null);
         v = getData(root, "Vector Dataset");
         System.out.println("first time getData " + v);
 
         //adding five more elements tothe vector
-        v.addElement(new Float(4));
-        v.addElement(new Float(5));
-        v.addElement(new Float(6));
-        v.addElement(new Float(7));
+        v.addElement(Float.valueOf(4));
+        v.addElement(Float.valueOf(5));
+        v.addElement(Float.valueOf(6));
+        v.addElement(Float.valueOf(7));
         final long[] extended_dims = {7};
         putData(testFile, root, "Vector Dataset",v,false, extended_dims);
         System.out.println("After adding four more elements to the vector");
@@ -3570,9 +3571,9 @@ public class DebugHDF {
         final String attrName = "Test attribute";
         final String[] attrValue = {"Test for group attribute"};
         final Datatype attrType = new H5Datatype(Datatype.CLASS_STRING, attrValue[0].length()+1, Datatype.NATIVE, Datatype.NATIVE);
-        final Attribute attr = new Attribute(g1, attrName, attrType, attrDims);
-        attr.setData(attrValue);
-        attr.write();
+        final H5ScalarAttr attr = new H5ScalarAttr(g1, attrName, attrType, attrDims);
+        attr.setAttributeData(attrValue);
+        attr.writeAttribute();
 
         file.createScalarDS(NAME_DATASET_INT, null, new H5Datatype(Datatype.CLASS_INTEGER, Datatype.NATIVE, Datatype.NATIVE, Datatype.NATIVE), DIMs, null, CHUNKs, 9, DATA_INT);
         file.createScalarDS(NAME_DATASET_FLOAT, null, new H5Datatype(Datatype.CLASS_FLOAT, Datatype.NATIVE, Datatype.NATIVE, Datatype.NATIVE), DIMs, null, CHUNKs, 9, DATA_FLOAT);
